# Personal-Project-Hub

./: README.md
Arvest-Client-Project/: LICENSE  README.md  backend.py
Arvest-Client-Project/templates/: core_budget_form.html
CLI-Wordle-Java/: winLoss.txt
CLI-Wordle-Java/src/: App.java  WordleGame.java
CLI-Wordle-Rust/: Cargo.toml
CLI-Wordle-Rust/src/: main.rs  stats.txt  words.rs
Chatroom-App/: .gitignore  LICENSE
Chatroom-App/frontend/: package-lock.json  package.json
Chatroom-App/rust_backend/: Cargo.toml
Chatroom-App/rust_backend/src/: main.rs
Client-Projects/Walmart-Data-Science/: ML_example.py  README.md  cleanerror2.csv  cleanerror3.csv  cleanprojected1.csv  cleanprojected3.csv  cleansite1.csv  (+7 more)
Compliments/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
Curiousity-Gauntlet/: data_plotter.py
Curiousity-Gauntlet-And-Provisional-Patent/: data_plotter.py
MIT-App-Inventor-Parser-JSON/: README.md  keywords.txt  library.properties
RMDL-Adafruit/: README.md
Robot--22-23/: project.pros
Robot-Arm-3D-Sim/: cubicSpline.py
Todo-List-App/: package-lock.json  package.json
Walmart-Data-Science/: cleanerror1.csv  cleanprojected.csv  cleanprojected2.csv  cleansite2.csv  cleansite3.csv  cleanup1.py  cleanup2.py  cleanupProjected.py  fourier_series_example2.py  fourier_site_2.py  fourier_site_3.py  projected.csv  separate_projected_data.py  site2.csv
fop-info-backend-functionality/: .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
monark-scara-arm-library/: keywords.txt  library.properties
(+575 files in other folders)
