[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = {version = "0.6.20", features = ["ws", "headers"]}
axum-macros = "0.3.8"
tower-http = {version = "0.4", features = ["fs", "cors"]}

tokio = {version = "1.32.0", features = ["full"]}
tokio-macros = "2.1.0"
async-recursion = "1.0.5"

#tracing = "0.1"

serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "3"

futures = "0.3"
futures-util = "0.3"

sha256 = "1.4"

[package.metadata]






